# insiderlist

./: .gitignore  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  configuration.yaml.example
backend/migrations/: 20240329120000_init.sql
backend/src/: configuration.rs  lib.rs  main.rs
backend/src/middleware/: cors.rs  rate_limit.rs
backend/src/module/: mod.rs
backend/src/module/email/: service.rs
backend/src/module/health/: handler.rs  model.rs  service.rs
backend/src/module/newsletter/: handler.rs  model.rs
backend/src/routes/: mod.rs
docs/: VPS_COMMANDS_REFERENCE.md  VPS_DEPLOYMENT.md
ui/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
ui/public/: manifest.json  robots.txt
ui/src/: App.tsx
ui/src/pages/: ComingSoonPage.tsx
