[package]
name = "insiderlist"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-cors = "0.7"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "migrate",
    "uuid",
] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
regex = "1.10"
resend-rs = "0.4"
uuid = { version = "1", features = ["v4"] }
actix-governor = "0.10.0"
